2003-07-03  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdk.def: Add gdk_string_to_compound_text_for_display.
	(#116537, Peter Zelezny)

Thu Jul  3 03:13:20 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkpaned.c (gtk_paned_set_child_property): Insert cast to
	fix warning. Assign something to old_value to quiet gcc

	* gtk/gtkcalendar.c 
	(start_spinning): gtk_timeout_add->g_timeout_add

	* gtk/gtkicontheme.c 
	(theme_lookup_icon): Make it compile (remove double semicolon)

	* gtk/gtktoolbutton.c
	(gtk_tool_button_class_init): Long comment about properties.
	(gtk_tool_button_class_init): Improve text for "use_underline"
	property
	(gtk_tool_button_create_menu_proxy): Fix up to use_mnemonic based
	on whether the passed-in label has use_mnemonic set
	(gtk_tool_button_create_menu_proxy): Split image cloning out in
	new function. Make that function also handle image with pixbuf
	storage.
	(gtk_tool_button_construct_contents): Use gtk_widget_destroy()
	instead of gtk_container_remove().
	(gtk_tool_button_construct_contents): Fix eliding bug

	* gtk/gtktoolbar.c
	(gtk_toolbar_finalize): New function. Unref tooltips, pointed out
	by Morten Welinder
	(gtk_toolbar_button_press): Make popup_context_menu signal provide
	coordinates and button number

	* tests/testtoolbar.c (main): Add new pixbuf toolbutton

	* tests/apple-red.png: new file

Wed Jul  2 18:00:56 2003  Owen Taylor  <otaylor@redhat.com>
	 
        * gtk/gtkicontheme.[ch]: Implement a loader for
	named themed icon based on from gnome-desktop library
	by Alex Larsson.

	* gtk/gtkiconthemeparser.[ch]: .ini file parsing code
	from gnome-desktop.

	* gtk/gtkiconfactory.[ch]: Add
	gtk_icon_source_set/get_icon_name() to allow stock icons
	to be based off of named theme icons.

	* gtk/gtkiconfactory.c: Rework sources so that the source
	is *either* a pixbuf, or a filename, or an icon name,
	instead of the pixbuf/filename mix it was before. Put a
	workaround for get_pixbuf() so that it can return the